[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/logo.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Buttons/MM_Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenu/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/DPG_logo.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Settings/Settings.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PauseMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 640.0
color = Color( 0.607843, 0.670588, 0.698039, 0.698039 )

[node name="Logo" type="Sprite" parent="."]
visible = false
position = Vector2( 320, 121 )
texture = ExtResource( 1 )

[node name="DpgLogo" type="Sprite" parent="."]
position = Vector2( 328, 224 )
scale = Vector2( 0.308333, 0.308333 )
texture = ExtResource( 4 )

[node name="Continue_Button" parent="." instance=ExtResource( 2 )]
margin_left = 153.0
margin_top = 314.0
margin_right = 488.0
margin_bottom = 301.0
custom_styles/focus = SubResource( 1 )
buttonText = "CONTINUE"

[node name="Settings_Button" parent="." instance=ExtResource( 2 )]
margin_left = 153.0
margin_top = 410.0
margin_right = 488.0
margin_bottom = 397.0
custom_styles/focus = SubResource( 1 )
buttonText = "SETTINGS"

[node name="Exit_Button" parent="." instance=ExtResource( 2 )]
margin_left = 153.0
margin_top = 514.0
margin_right = 488.0
margin_bottom = 582.0
custom_styles/focus = SubResource( 1 )
buttonText = "EXIT"

[node name="Settings" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="buttonPressed" from="Continue_Button" to="." method="_on_Continue_Button_buttonPressed"]
[connection signal="buttonPressed" from="Settings_Button" to="." method="_on_Settings_Button_buttonPressed"]
